caspar (20091115-1) UNRELEASED; urgency=low

  * FIXME
  * New upstream release (missed: 20090926, 20091114).
  * Renamed caspar-doc.doc-base.csp_sucp to caspar-doc.doc-base.csp_helper.
  * debian/control: bumped Standards-Version: from 3.8.1 to 3.8.3 (no
    changes needed).
  * debian/copyright: update year, explicitly state GPL v3 or later.

 -- Joost van Baal <joostvb@debian.org>  Sat, 14 Nov 2009 08:43:20 +0100

caspar (20090406-1) unstable; urgency=low

  * New upstream release; backwards incompatible with caspar <= 20060216.
    See upstream NEWS file.
  * debian/control: use new Homepage field.
  * debian/control: add CVS Id tags.
  * debian/control: bumped Standards-Version: from 3.7.2.0 to 3.8.1 (no
    changes needed).
  * debian/control: no longer suggest obsolete package tetex-bin, but its
    successor.
  * debian/caspar-doc.doc-base.*: use new doc-base sections.
  * debian/copyright: upstream changed license to GPL v3, adjusted.

 -- Joost van Baal <joostvb@debian.org>  Fri, 19 Jun 2009 22:55:32 +0200

caspar (20070729-1) unstable; urgency=low

  * New upstream (missed: 20070713).
  * debian/control: add perl to suggests, for pod2{html,man} as called
    in pod.mk.  Remove "Conflicts: caspar (<< 20040531-1)" from caspar-doc:
    even oldstable doesn't ship such old versions.  Improve package description.
  * Move DH_COMPAT from debian/rules to debian/compat, and move from 4 to 5.
    Thanks lintian.  (And: Get rid of unneeded debian/dirs.  Nice CVS Id tag in
    debian/docs.)
  * debian/rules: don't ignore all errors from "make distclean".  Thanks again
    lintian.

 -- Joost van Baal <joostvb@debian.org>  Wed, 15 Aug 2007 09:15:35 +0200

caspar (20060618-1) unstable; urgency=low

  * New upstream (missed: snapshots 20060216, 20060531, 20060608, 20060610).
  * Beware: change in caspar.mk user interface.  See the 20060216 entry in
    /usr/share/doc/caspar/NEWS.gz and caspar(7), as installed with the