@@ -1,10 +1,7 @@
 usr/share/doc/caspar/AUTHORS
-usr/share/doc/caspar/README
 usr/share/doc/caspar/THANKS
 usr/share/doc/caspar/TODO
-usr/share/doc/caspar/NEWS
 usr/share/doc/caspar/ChangeLog.2002
 usr/share/doc/caspar/c*sp*.html
 usr/share/doc/caspar/c*sp*.txt
 usr/share/doc/caspar/c*sp*.ps
-usr/share/man/man7
